GitOps/clusters/cyberhawk-talos-k8s/4-media/radarr/21-radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: radarr
  ports:
    - name: http
      port: 7878
      targetPort: http
