GitOps/clusters/cyberhawk-talos-k8s/4-media/radarr/22-radarr-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - radarr.cyberhawk.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr
          port: 7878
